--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/ExtendedCase/EditForm.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/ExtendedCase/EditForm.cshtml
@@ -3,11 +3,10 @@
 @model DH.Helpdesk.BusinessData.Models.ExtendedCase.CustomerCaseSolutionsExtendedForm
 
 @Scripts.Render(BundleConfig.ScriptNames.ConfirmationDialog)
-
-<link href="~/Content/summernote-0.8.18/summernote.min.css" rel="stylesheet" crossorigin="anonymous" />
-<link href="~/Content/font-awesome.css" rel="stylesheet" />
-<link href="~/Content/font-awesome.min.css" rel="stylesheet" />
-<script src="~/Content/summernote-0.8.18/summernote.min.js" crossorigin="anonymous"></script>
+<link href="~/Content/css/summernote.css" rel="stylesheet" />
+<link href="~/Content/css/font-awesome.min.css" rel="stylesheet" />
+<link href="~/Content/css/bootstrap.css" rel="stylesheet" />
+<script src="~/Content/summernote-0.8.18/summernote.js"></script>
 
 <div class="secnavs fixed">
     <div class="pull-left">
