--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Login/Login.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Login/Login.cshtml
@@ -47,13 +47,21 @@
             <input type="button" value="Get Case" name="btnGetCase" id="btnGetCase" class="btn btn-large btn-warning" style="width:100%;" />
             <input type="button" value="Save Case" name="btnSaveCase" id="btnSaveCase" class="btn btn-large btn-warning" style="width:100%;" />*@
         }
-        @using (Html.BeginForm("SignIn", "Login", null, FormMethod.Post, new { id = "frmLogin", name = "frmLogin" }))
+        @if (ViewBag.ShowMsButton != null)
         {
-            <div class="text-center">
-                <input type="image" value="Login with Microsoft" name="btnLogin" id="btnLogin" src="~/Content/img/ms-symbollockup_signin_light.png"/>
-            </div>
-            @*<input type="submit" value="Login with Microsoft" name="btnLogin" id="btnLogin" class="btn btn-large btn-success" style="width:100%;" />*@
+            if (ViewBag.ShowMsButton)
+            {
+                using (Html.BeginForm("SignIn", "Login", null, FormMethod.Post, new { id = "frmLogin", name = "frmLogin" }))
+                {
+                    <div class="text-center">
+                        <input type="image" value="Login with Microsoft" name="btnLogin" id="btnLogin" src="~/Content/img/ms-symbollockup_signin_light.png" />
+                    </div>
+                    @*<input type="submit" value="Login with Microsoft" name="btnLogin" id="btnLogin" class="btn btn-large btn-success" style="width:100%;" />*@
+                }
+            }
+
         }
+
     </div>
         <div class="signin-bottom">
             <p><img src="@Url.Content("~/Content/img/dhhelpdesk.png")" /></p>
