--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/ExtendedCase/EditForm.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/ExtendedCase/EditForm.cshtml
@@ -1,5 +1,8 @@
 ﻿@using DH.Helpdesk.Web
-@model DH.Helpdesk.BusinessData.Models.ExtendedCase.CustomerCaseSolutionsExtendedForm
+@model DH.Helpdesk.BusinessData.Models.ExtendedCase.ExtendedFormViewModels
+@{
+    var currentLang = Model.ActiveLanguages.FirstOrDefault(c => c.Id == SessionFacade.CurrentLanguageId);
+}
 
 @Scripts.Render(BundleConfig.ScriptNames.ConfirmationDialog)
 <link href="~/Content/css/summernote.css" rel="stylesheet" />
@@ -77,20 +80,30 @@
                     <table class="table table-striped table-bordered table-hover">
                         <thead>
                             <tr>
-                                <th>
+                                <th style="border-right:none">
                                     @Translation.GetCoreTextTranslation("Formulär") editor
+                                </th>
+                                <th style="text-align:right; border-left:none">
+                                    <select id="chosenLanguage" onchange="onChangeLanguage(this)">
+                                        <option class="required-defaultLng" selected value="@SessionFacade.CurrentLanguageId">@Translation.GetCoreTextTranslation(currentLang.Name) * (@currentLang.LanguageId)</option>
+                                        @foreach (var l in Model.ActiveLanguages.Where(c => c.Id != SessionFacade.CurrentLanguageId).OrderBy(c => c.Name))
+                                        {
+                                            <option id="optSelectedFormLang" value="@l.Id">@Translation.GetCoreTextTranslation(l.Name) (@l.LanguageId)</option>
+                                        }
+                                    </select>
                                 </th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <td>
+                                <td colspan="2">
                                     <div id="fields" class="dragndrop">
                                         <ul id="source">
                                             <li class="extendedCaseFormsLst" data-type="section"><i class="fa fa-header" aria-hidden="true"></i> @Translation.GetCoreTextTranslation("Sektion")</li>
                                             <li class="extendedCaseFormsLst" data-type="textbox"><i class="fa fa-font" aria-hidden="true"></i> @Translation.GetCoreTextTranslation("Textfält")</li>
                                             <li class="extendedCaseFormsLst" data-type="textarea"><i class="fa fa-text-width" aria-hidden="true"></i> @Translation.GetCoreTextTranslation("Textarea")</li>
                                             <li class="extendedCaseFormsLst" data-type="date"><i class="fa fa-calendar-o" aria-hidden="true"></i> @Translation.GetCoreTextTranslation("Datumfält")</li>
+                                            <li class="extendedCaseFormsLst" data-type="fileupload"><i class="fa fa-upload" aria-hidden="true"></i> @Translation.GetCoreTextTranslation("Filuppladdning")</li>
                                             @*<li class="extendedCaseFormsLst" data-type="select"><i class="fa fa-list-ul" aria-hidden="true"></i> Template</li>*@
                                             <li class="extendedCaseFormsLst" data-type="html"><i class="fa fa-file-word-o" aria-hidden="true"></i> @Translation.GetCoreTextTranslation("Infofält")</li>
                                         </ul>
@@ -109,27 +122,38 @@
 
 <script type="text/javascript">
 
-    const defaultLanguageId = @Model.FieldTranslations.Where(l => l.IsDefaultLanguage).FirstOrDefault().Language.Id;
+    const defaultLanguage = {
+        Id : @Model.FieldTranslations.Where(l => l.IsDefaultLanguage).FirstOrDefault().Language.Id,
+        LanguageId : '@Model.FieldTranslations.Where(l => l.IsDefaultLanguage).FirstOrDefault().Language.LanguageId'
+        };
     const currentLanguageId = @SessionFacade.CurrentLanguageId;
     const droppedItemClass = "dropped-item";
 
     $(document).ready(function () {
+
+        var activeLanguages = {}
+        activeLanguages = JSON.parse('@Html.Raw(Json.Encode(Model.ActiveLanguages))');
         var translations = {}
         translations = JSON.parse('@Html.Raw(Json.Encode(Model.FieldTranslations))');
         const IDNAME = "firstSectionId";
 
+
         let divHeaderActions = (idName) => "<div class='header-actions'><a class='fa fa-pencil fa-lg' data-toggle='collapse' href='#" + idName + "' role='button' title='Edit' aria-hidden='true'></a><a class='fa fa-trash fa-lg' href='#" + idName + "' title='Remove Element' role='button' aria-hidden='true'></a></div>";
         let divHeaderLabel = (labelClass, labelName, idName) => "<div class='header-label'><label class='" + labelClass + "' id='" + idName + "header" + "'><span id= '" + idName + "headerName" + "'>" + labelName + "</label></div>";
         let editFieldHtml = (idName, placeHolder, isSection, hasRequiredChk, isRequired = false) => {
-            var res =
-                "<div class='collapse' id = '" + idName + "'><div><table class='table borderless' style='margin-left:10px;margin-right:10px'><tbody>"
+            var res = "<div class='collapse' id = '" + idName + "'><div><table class='table borderless' style='margin-left:10px;margin-right:10px;'><tbody>";
+            var defaultLanguageValue = '';
+            for (let i = 0; i < activeLanguages.length; i++) {
+                var isDefaultLanguage = activeLanguages[i].Id == defaultLanguage.Id;
 
-            for (let i = 0; i < translations.length; i++) {
                 if (placeHolder !== null) {
-                    if (getStringWithoutSpecialChars(getStringWithoutSweChars(translations[i].Name)) == getStringWithoutSpecialChars(getStringWithoutSweChars(placeHolder))) {
-                        var translationText = (translations[i].TranslationText == null ? "" : translations[i].TranslationText)
-                        res = res + "<tr><td><label for='" + idName + "label" + translations[i].Language.Id + "'><span>@Translation.GetCoreTextTranslation("Fältetikett") " + translations[i].Language.LanguageId + " </span>" + (translations[i].IsDefaultLanguage == true ? "<span class='required-defaultLng'>*</span>" : "") + "</label ></td > <td><input class='labelName' type='text' id='" + idName + "label" + translations[i].Language.Id + "' data-dhhelpdesk-langId='" + translations[i].Language.Id + "' data-dhhelpdesk-lang='" + translations[i].Language.LanguageId + "' data-dhhelpdesk-section='" + isSection + "' data-dhhelpdesk-id='" + translations[i].Id + "' placeholder='" + translationText + "' value='" + translationText + "'></td></tr>"
+                    var translation = translations.filter(t => getStringWithoutSpecialChars(getStringWithoutSweChars(t.Name)) == getStringWithoutSpecialChars(getStringWithoutSweChars(placeHolder))
+                                                                    && t.Language.Id == activeLanguages[i].Id);
+                    var translationText = (translation[0].TranslationText == null ? "" : translation[0].TranslationText);
+                    if (activeLanguages[i].Id == defaultLanguage.Id) {
+                        defaultLanguageValue = translationText;
                     }
+                    res = res + "<tr class='trTransField' data-dhhelpdesk-labelId='" + idName + "' data-dhhelpdesk-langId='" + activeLanguages[i].Id + "'" + (activeLanguages[i].Id == document.getElementById("chosenLanguage").value ? "" : "style='display:none'") + "><td>" + (isDefaultLanguage ? "" : "<br/>") + "<label for='" + idName + "label" + activeLanguages[i].Id + "'><span>@Translation.GetCoreTextTranslation("Fältetikett") " + activeLanguages[i].LanguageId + " </span>" + (isDefaultLanguage ? "<span class='required-defaultLng'>*</span>" : "") + "</label></td><td>" + "<span class='spanDefaultLabelName'>" + (isDefaultLanguage ? "" : " (" + defaultLanguage.LanguageId + ") </span>" + " <span class='spanDefaultLabelName' id='defaultLabelName" + idName +"'>" + defaultLanguageValue) + "</span>" + "<input class='labelName' type='text' id='" + idName + "label" + activeLanguages[i].Id + "' data-dhhelpdesk-langId='" + activeLanguages[i].Id + "' data-dhhelpdesk-lang='" + activeLanguages[i].LanguageId + "' data-dhhelpdesk-section='" + isSection + "' data-dhhelpdesk-id='" + translation[0].Id + "' placeholder='" + translationText + "' value='" + translationText + "'></td></tr>"
                 }
             }
 
@@ -186,6 +210,10 @@
 
                         case "date":
                             draggedItem.html("<div class='field'><div class='header'><div class='header-label'><label class='field-label' id='" + idName + "header" + "'><span id= '" + idName + "headerName" + "'>@Translation.GetCoreTextTranslation("Datumfält")</span> <span class='required' id='" + idName + "requiredSpan" + "'>*</span></label></div>" + divHeaderActions(idName) + "</div><div class='control'><input type='date' class='form-control form-control-width' readonly></div>" + editFieldHtml(idName, '@Html.Raw(Translation.GetCoreTextTranslation("Datumfält"))', false, true, false) + "</div>")
+                            break;
+
+                        case "fileupload":
+                            draggedItem.html("<div class='field'><div class='header'><div class='header-label'><label class='field-label' id='" + idName + "header" + "'><span id= '" + idName + "headerName" + "'>@Translation.GetCoreTextTranslation("Filuppladdning")</span> <span class='required' id='" + idName + "requiredSpan" + "'>*</span></label></div>" + divHeaderActions(idName) + "</div><div class='control'><input type='text' value='Drag filer hit' class='file-upload' readonly></div>" + editFieldHtml(idName, '@Html.Raw(Translation.GetCoreTextTranslation("Filuppladdning"))', false, true, false) + "</div>")
                             break;
 
                         //case "select":
@@ -280,6 +308,10 @@
                                 $("#dropzone").append(listHtml("date", "<div class='field'><div class='header'><div class='header-label'><label class='field-label' id='" + idName + "header" + "'><span id= '" + idName + "headerName" + "'>" + currentLanguageLabel[0].TranslationText + "</span> <span class='required' id='" + idName + "requiredSpan" + "'>*</span></label></div>" + divHeaderActions(idName) + "</div><div class='control'><input type='date' class='form-control form-control-width' readonly></div>" + editFieldHtml(idName, formData.tabs[t].sections[s].controls[c].label, false, true, isRequired) + "</div>"), null);
                             }
 
+                            else if (dataType == "fileupload") {
+                                $("#dropzone").append(listHtml("fileupload", "<div class='field'><div class='header'><div class='header-label'><label class='field-label' id='" + idName + "header" + "'><span id= '" + idName + "headerName" + "'>" + currentLanguageLabel[0].TranslationText + "</span> <span class='required' id='" + idName + "requiredSpan" + "'>*</span></label></div>" + divHeaderActions(idName) + "</div><div class='control'><input type='text' class='form-control form-control-width' readonly></div>" + editFieldHtml(idName, formData.tabs[t].sections[s].controls[c].label, false, true, isRequired) + "</div>"), null);
+                            }
+
                             else if (dataType = "html") {
                                 $("#dropzone").append(listHtml("html", "<div class='field'><div class='header'><div class='header-label'><label class='field-label' id='" + idName + "header" + "'><span id= '" + idName + "headerName" + "'>" + '@Html.Raw(Translation.GetForJS(Translation.GetCoreTextTranslation("Infofält")))' + "</span> <span class='required' id='" + idName + "requiredSpan" + "'>*</span></label></div>" + divHeaderActions(idName) + "</div><div class='control' style='padding:10px'>" + summerNoteConfig(idName, formData.tabs[t].sections[s].controls[c].valueBinding) + "</div></div>"));
                             }
@@ -294,7 +326,7 @@
         }
 
         $(document).on("keyup", ".labelName", function (e) {
-            var id = $(this).attr('id').replace('label' + getUrlVars()["languageId"], 'headerName');
+            var id = $(this).attr('id').replace('label' + document.getElementById("chosenLanguage").value, 'headerName');
                 document.getElementById(id).innerHTML = $(this).attr('value');
             });
 
@@ -376,7 +408,7 @@
                 });
 
                 if (requiredNotFilled > 0) {
-                    ShowToastMessage('@Html.Raw(Translation.GetForJS(Translation.Get("Obligatorisk fältetikett måste anges", Enums.TranslationSource.TextTranslation)))', "error");
+                    ShowToastMessage('@Html.Raw(Translation.GetForJS(Translation.Get("Alla texter måste vara ifyllda på språket ", Enums.TranslationSource.TextTranslation)))' + defaultLanguage.LanguageId, "error");
                     return;
                 }
                 var selectedCaseSolutions = [];
@@ -457,7 +489,7 @@
             counter++;
 
             var sTranslations = document.getElementById(obj.id.replace("header", "")).querySelectorAll(".labelName");
-            var sTranslationsProperty = [...sTranslations].filter(item => item.getAttribute('data-dhhelpdesk-langid') == defaultLanguageId);
+            var sTranslationsProperty = [...sTranslations].filter(item => item.getAttribute('data-dhhelpdesk-langid') == defaultLanguage.Id);
 
             items[i] = {};
             items[i].id = sTranslationsProperty[0].value + counter; //document.getElementById(obj.id).innerText + counter;//(i + 1);
@@ -491,7 +523,7 @@
                     var content = contentSummerNote ? 'function(m) { return ' + contentSummerNote + ' }' : ""
 
                     var fTranslations = obj.querySelectorAll(".labelName");
-                    var fTranslationsProperty = [...fTranslations].filter(item => item.getAttribute('data-dhhelpdesk-langid') == defaultLanguageId);
+                    var fTranslationsProperty = [...fTranslations].filter(item => item.getAttribute('data-dhhelpdesk-langid') == defaultLanguage.Id);
 
                     var idControl = fTranslationsProperty.length > 0 ? fTranslationsProperty[0].value + counter : label + counter;
 
@@ -625,6 +657,23 @@
         return templates;
     }
 
+    function onChangeLanguage(opt) {
+        $.each($(".trTransField"), function () {
+            if (this.getAttribute('data-dhhelpdesk-langid') == opt.value) {
+                this.style.display = "";
+                let lblName = $(this).find('.labelName')[0].value;
+                var id = $(this).attr('data-dhhelpdesk-labelId');
+                var idLbl = $(this).attr('data-dhhelpdesk-labelId') + 'headerName';
+
+                document.getElementById(idLbl).innerHTML = lblName;
+                document.getElementById('defaultLabelName' + id).innerHTML = document.getElementById(id + 'label' + defaultLanguage.Id).value;
+            }
+            else {
+                this.style.display = "none";
+            }
+        });
+    }
+
 </script>
 
 <style>
@@ -755,5 +804,18 @@
 
     .note-modal {
         height: max-content;
+    }
+
+    .file-upload {
+        margin: 10px;
+        border-color: black;
+        border: 1px dashed black !important;
+        height: 50px !important;
+        text-align: center !important;
+    }
+
+    .spanDefaultLabelName {
+        margin-left: 5px;
+        font-size: 12px;
     }
 </style>
